utkudan egemene değiştirildi

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-<title>Utku burdaydý ...</title>
-
-
 </head>
 <body>
-<div class="deneme">Test alaný ....</div>
-</body>
+  <h1>Egemen</h1></body>
 </html>
