egemen son değişiklik

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Utku burdaydý ...</title>
+<title>Utku burdayd...</title>
 
 
 </head>
 <body>
-<div class="deneme">Test alaný ....</div>
+<div class="deneme">Test alan22 ....</div>
 </body>
 </html>
